# birgo

./: .gitignore  manage.py  pyproject.toml
.github/workflows/: github_actions_security.yml  prod_deploy.yml  pylint.yml
birgo/: asgi.py  constants.py  functions.py  settings.py  urls.py  wsgi.py
birgo/classes/: models.py
drivers/: admin.py  apps.py  models.py  signals.py
drivers/migrations/: 0001_initial.py  0002_driver_status.py  0003_alter_driver_status.py  0004_driver_approved_at.py  0005_car_color.py  0006_alter_car_color_alter_car_model_and_more.py
lots/: admin.py  apps.py  constants.py  forms.py  models.py
lots/migrations/: 0001_initial.py  0002_userlotcategory_parent.py  0003_userlotgallery.py  0004_userlot_max_price.py
offers/: admin.py  apps.py  constants.py  models.py
offers/migrations/: 0001_initial.py
system/: admin.py  apps.py  models.py
system/migrations/: 0001_initial.py  0002_region.py  0003_region_status.py  0004_alter_region_parent.py  0005_carcolor_carcolortranslation.py  0006_regiontranslation.py
telegram/: apps.py  constants.py  decorators.py  texts.py  urls.py  views.py
telegram/templatetags/: svg_tags.py
templates/tg-mini-app/: base.html  home.html  init.html  welcome.html
trips/: admin.py  apps.py  forms.py  models.py
trips/migrations/: 0001_initial.py  0002_trip_car_trip_created_at_trip_driver_trip_updated_at_and_more.py  0003_remove_trippassenger_location_a_and_more.py  0006_triprequest_people_count.py  (+9 more)
users/: admin.py  apps.py  models.py
wishr/: .env.example  asgi.py  functions.py  settings.py  urls.py  wsgi.py
(+38 files in other folders)
