[tool.poetry]
name = "wishr"
version = "0.1.0"
description = ""
authors = ["Sirojiddin Mustafayev <sirojiddinmustafayev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
python-dotenv = "^1.1.1"
dj-database-url = "^3.0.1"
psycopg2-binary = "^2.9.10"
pytelegrambotapi = "^4.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
